adicionando funcionalidade de templates