@@ -1,14 +1,16 @@
 package com.example.cert.security;
 
+import com.example.cert.domain.UserRole;
 import com.example.cert.domain.Usuario;
 import com.example.cert.repository.UserRepository;
 import lombok.AllArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-
-import java.util.Collections;
+import org.springframework.security.core.userdetails.User;
+import java.util.List;
 
 @Service
 @AllArgsConstructor
@@ -21,9 +23,12 @@ public class CustomUserDetailsService implements UserDetailsService {
         Usuario user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
 
-        return new org.springframework.security.core.userdetails.User(
+        // A role é prefixada com ROLE_ para funcionar com hasRole() no @PreAuthorize
+        String roleAuthority = "ROLE_" + (user.getRole() != null ? user.getRole().name() : UserRole.CLIENT.name());
+
+        return new User(
                 user.getEmail(),
                 user.getPassword(),
-                Collections.emptyList());
+                List.of(new SimpleGrantedAuthority(roleAuthority)));
     }
 }
